# sorting-algorithms

./: CMakeLists.txt  README.md  compile.bat  run.bat
algorithms/: algorithm_interface.h  algorithm_registry.cpp  algorithm_registry.h  bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp  register_algorithms.cpp  selection_sort.cpp  template.cpp
docs/: BUILDING.md  CONTRIBUTING.md
src/: main.cpp  new_main.cpp  sorting_algorithms.cpp  sorting_algorithms.h  visualizer.cpp  visualizer.h
src/ui/: algorithm_comparison.cpp  algorithm_comparison.h  bar_renderer.cpp  bar_renderer.h  input_handler.cpp  input_handler.h  simple_ui.cpp  simple_ui.h
